<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context=".Confirm_Order">


    <TextView
        android:id="@+id/tableOrPsNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:gravity="center"
        android:text="@string/table_number"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/mealNemaConfirmOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/mealname"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/red"
        android:textSize="30sp"
        tools:ignore="TextViewEdits" />

    <EditText
        android:id="@+id/mealNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:hint="@string/meal_number"
        android:inputType="number"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/gray2"
        android:textColorHint="@color/gray2"
        android:textSize="30sp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/notesConfirmOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:gravity="center"
        android:hint="@string/notes"
        android:inputType="textMultiLine"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/gray2"
        android:textColorHint="@color/gray2"
        android:textSize="30sp"
        tools:ignore="Autofill,TextViewEdits" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:id="@+id/confirmOrderConfirmOrder"
        android:layout_marginEnd="2dp"
        android:background="@drawable/login_background"
        android:text="@string/confirm_order"
        android:textSize="30sp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_weight="2"
        android:id="@+id/cancelConfirmOrder"
        android:background="@drawable/login_background"
        android:text="@string/cancel"
        android:textSize="30sp" />

</LinearLayout>
