<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="30dp"
    android:background="@drawable/login_background">
    <LinearLayout
        android:padding="5dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        android:background="@drawable/login_background_linear">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:src="@drawable/red_wings_logo"
            android:layout_marginBottom="60dp"
            android:contentDescription="@string/loginLogo" />
        <LinearLayout
            android:layout_weight="1"
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_person_black_24dp"
                android:contentDescription="@string/user_logo" />
            <EditText
                android:inputType="textPersonName"
                android:gravity="center"
                android:hint="@string/enter_user_name"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="Autofill"
                android:id="@+id/editTextUserNameLogIn"/>

        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/password_logo"
                android:contentDescription="@string/password" />
            <EditText
                android:inputType="textPassword"
                android:gravity="center"
                android:hint="@string/enter_password"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="Autofill"
                android:id="@+id/editTextPasswordLogIn"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="0dp"
            android:layout_weight="1">
            <CheckBox
                android:text="@string/remmber_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/checkbboxLogin"/>
        </LinearLayout>

        <Button
            android:layout_margin="4dp"
            android:layout_width="@dimen/button"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/log_in"
            android:textSize="30sp"
            android:fontFamily="cursive"
            android:textColor="#FFFFFF"
            android:background="@drawable/login_button"
            android:id="@+id/buttonLoginLogin"/>


    </LinearLayout>



</LinearLayout>