<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:padding="5dp"
    android:weightSum="100"
    android:orientation="vertical"
    tools:context=".Order">
    <include
        layout="@layout/action_par"/>
    <TextView
        android:background="@drawable/login_background"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="50sp"
        android:text="@string/table_5"
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="80">
        <LinearLayout
            android:weightSum="9"
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <TextView
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/_1"
                android:padding="5dp"
                android:textSize="50sp"
                android:textColor="@color/red"
                android:gravity="center"/>
            <ImageView
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:textColor="#000"
                android:gravity="center"/>
            <TextView
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tea"
                android:padding="5dp"
                android:textSize="30sp"
                android:textColor="#000"
                android:gravity="center"
                />
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/_2"
                android:padding="5dp"
                android:textSize="50sp"
                android:textColor="#000"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:weightSum="9"
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <TextView
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/_2"
                android:padding="5dp"
                android:textSize="50sp"
                android:textColor="@color/red"
                android:gravity="center"/>
            <ImageView
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:textColor="#000"
                android:gravity="center"/>
            <TextView
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/cane"
                android:padding="5dp"
                android:textSize="30sp"
                android:textColor="#000"
                android:gravity="center"
                />
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/_2"
                android:padding="5dp"
                android:textSize="50sp"
                android:textColor="#000"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:weightSum="9"
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <TextView
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/_3"
                android:padding="5dp"
                android:textSize="50sp"
                android:textColor="@color/red"
                android:gravity="center"/>
            <ImageView
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:gravity="center"/>
            <TextView
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/coffee"
                android:padding="5dp"
                android:textSize="30sp"
                android:textColor="#000"
                android:gravity="center"
                />
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/_2"
                android:padding="5dp"
                android:textSize="50sp"
                android:textColor="#000"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15">
        <Button
            android:layout_margin="1dp"
            android:background="@drawable/login_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"/>
        <Button
            android:layout_margin="1dp"
            android:background="@drawable/login_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/finish"/>
        <Button
            android:layout_margin="1dp"
            android:background="@drawable/login_button"
            android:text="@string/add_order"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>


</LinearLayout>