<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".Manager">

    <include layout="@layout/action_par" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:background="@drawable/login_background"
            android:text="@string/delete_all"
            android:textColor="#000000"
            android:layout_margin="1dp"
            android:textSize="20dp" />
        <LinearLayout
            android:background="@drawable/login_background"
            android:layout_margin="1dp"
            android:weightSum="10"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="2"
                android:text="@string/table_number1"
                android:textColor="#000000"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="4"
                android:text="@string/time"
                android:textColor="#000000"/>


        </LinearLayout>

        <LinearLayout
            android:layout_margin="1dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/_5"
                android:textColor="@color/red"
                android:textSize="30dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/_30_1_2010_3_34pm"
                android:textColor="#000000"
                android:textSize="30dp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:background="@drawable/login_button"
                android:padding="17dp"
                android:text="@string/cancel"
                android:textSize="30dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_margin="1dp"

            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/_2"
                android:textColor="@color/red"
                android:textSize="30dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/_30_1_2010_3_34pm"
                android:textColor="#000000"
                android:textSize="30dp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:background="@drawable/login_button"
                android:padding="17dp"
                android:text="@string/cancel"
                android:textSize="30dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_margin="1dp"

            android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/_3"
            android:textColor="@color/red"
            android:textSize="30dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/_30_1_2010_3_34pm"
            android:textColor="#000000"
            android:textSize="30dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:background="@drawable/login_button"
            android:padding="17dp"
            android:text="@string/cancel"
            android:textSize="30dp" />
    </LinearLayout>
    </LinearLayout>

</LinearLayout>