<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/gray1"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <include
        layout="@layout/action_par"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:id="@+id/cafe_textview_par_man_fragment"
            android:gravity="bottom|center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/yellow"
            android:text="@string/cafe"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />
        <TextView
            android:id="@+id/ps_textview_par_man_fragment"
            android:text="@string/pc"
            android:gravity="bottom|center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/yellow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/takeaway_textview_par_man_fragment"
            android:text="@string/take_away"
            android:gravity="bottom|center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/yellow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <fragment
        class="com.example.redwings.Cafe_Button_par_man"
        android:id="@+id/frgment_par_man"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"/>

</LinearLayout>