<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".Chose_category"
    android:padding="3dp">
    <include
        layout="@layout/action_par"/>
       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/layout_cafe_chose_catogry"
        android:background="@drawable/chose_button_backgroung"
        android:layout_margin="5dp"
        >
        <ImageView
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:src="@drawable/ic_cafe"
            tools:ignore="ContentDescription,NestedWeights" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/cafe"
            android:gravity="center"
            android:textSize="100sp"
            android:fontFamily="monospace"
            android:textColor="#FFFFFF"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/chose_button_backgroung"
        android:layout_margin="5dp"
        android:id="@+id/layout_pc_chose_catogry"
        android:layout_weight="1">
        <ImageView
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:src="@drawable/ic_pc"
            tools:ignore="ContentDescription,NestedWeights" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/pc"
            android:gravity="center"
            android:textSize="100sp"
            android:fontFamily="monospace"
            android:textColor="#FFFFFF"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/chose_button_backgroung"
        android:layout_margin="5dp"
        android:id="@+id/layout_takeaway_chose_catogry"
        android:layout_weight="1">
        <ImageView
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:src="@drawable/take_away_logo"
            tools:ignore="ContentDescription,NestedWeights" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/take_away"
            android:gravity="center"
            android:textSize="50sp"
            android:fontFamily="monospace"
            android:textColor="#FFFFFF"
            />
    </LinearLayout>


</LinearLayout>